--- a/app/src/main/res/layout/filter_and_sort.xml
+++ b/app/src/main/res/layout/filter_and_sort.xml
@@ -18,7 +18,7 @@
             android:layout_marginTop="12dp"
             android:layout_marginEnd="8dp"
             android:tag="random"
-            android:text="@string/caption_flashed"
+            android:text="@string/lbl_flashed"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/view2"
             />
@@ -31,7 +31,7 @@
             android:background="@color/label_bgcolor"
             android:paddingStart="3dp"
             android:paddingEnd="3dp"
-            android:text="@string/level"
+            android:text="@string/lbl_level"
             android:textColor="@color/border_color"
             android:textStyle="bold"
             app:layout_constraintTop_toTopOf="parent"
@@ -43,7 +43,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:text="@string/basis"
+            android:text="@string/lbl_basis"
             app:layout_constraintTop_toBottomOf="@+id/lbl_level"
             app:layout_constraintStart_toStartOf="parent"
             />
@@ -52,7 +52,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="@string/advanced"
+            android:text="@string/lbl_advanced"
             app:layout_constraintTop_toBottomOf="@+id/lbl_level"
             app:layout_constraintStart_toEndOf="@+id/sw_level1"
             app:layout_constraintEnd_toStartOf="@+id/sw_level3"
@@ -63,7 +63,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
-            android:text="@string/nice_to_know"
+            android:text="@string/lbl_nice2know"
             app:layout_constraintTop_toBottomOf="@+id/lbl_level"
             app:layout_constraintEnd_toEndOf="parent"
             />
@@ -86,7 +86,7 @@
             android:labelFor="@id/text_length"
             android:paddingStart="3dp"
             android:paddingEnd="3dp"
-            android:text="@string/lemma_length_pre"
+            android:text="@string/lbl_lemmalength_pre"
             android:textColor="@color/border_color"
             android:textStyle="bold"
             app:layout_constraintTop_toBottomOf="@+id/divider01"
@@ -112,7 +112,7 @@
             android:background="@color/label_bgcolor"
             android:paddingStart="3dp"
             android:paddingEnd="3dp"
-            android:text="@string/lemma_length_post"
+            android:text="@string/lbl_lemmalength_post"
             android:textColor="@color/border_color"
             android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@+id/text_length"
@@ -124,7 +124,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
-            android:text="@string/apply"
+            android:text="@string/lbl_on_off"
             app:layout_constraintTop_toTopOf="@+id/divider01"
             app:layout_constraintEnd_toEndOf="parent"
             />
@@ -146,7 +146,7 @@
             android:background="@color/label_bgcolor"
             android:paddingStart="3dp"
             android:paddingEnd="3dp"
-            android:text="@string/initiaal"
+            android:text="@string/lbl_initiaal"
             android:textColor="@color/border_color"
             android:textStyle="bold"
             app:layout_constraintTop_toBottomOf="@+id/divider02"
@@ -182,7 +182,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
-            android:text="@string/apply"
+            android:text="@string/lbl_on_off"
             app:layout_constraintTop_toBottomOf="@+id/key_scroller"
             app:layout_constraintEnd_toEndOf="parent"
             />
@@ -205,7 +205,7 @@
             android:labelFor="@id/text_blocksize"
             android:paddingStart="3dp"
             android:paddingEnd="3dp"
-            android:text="@string/block_size_pre"
+            android:text="@string/lbl_blocksize_pre"
             android:textColor="@color/border_color"
             android:textStyle="bold"
             app:layout_constraintTop_toBottomOf="@+id/divider03"
@@ -233,7 +233,7 @@
             android:background="@color/label_bgcolor"
             android:paddingStart="3dp"
             android:paddingEnd="3dp"
-            android:text="@string/block_size_post"
+            android:text="@string/lbl_blocksize_post"
             android:textColor="@color/border_color"
             android:textStyle="bold"
             app:layout_constraintTop_toBottomOf="@+id/divider03"
@@ -245,7 +245,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
-            android:text="@string/apply"
+            android:text="@string/lbl_on_off"
             app:layout_constraintTop_toBottomOf="@+id/divider03"
             app:layout_constraintEnd_toEndOf="parent"
             />
@@ -267,7 +267,7 @@
             android:background="@color/label_bgcolor"
             android:paddingStart="3dp"
             android:paddingEnd="3dp"
-            android:text="@string/sort"
+            android:text="@string/lbl_sort"
             android:textColor="@color/border_color"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
@@ -295,7 +295,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:tag="index"
-            android:text="@string/index"
+            android:text="@string/lbl_index"
             app:layout_constraintTop_toBottomOf="@+id/divider04"
             app:layout_constraintEnd_toEndOf="parent"
             />
@@ -306,7 +306,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:tag="alfa"
-            android:text="@string/alphabetical"
+            android:text="@string/lbl_alphabetical"
             app:layout_constraintTop_toBottomOf="@+id/sw_index"
             app:layout_constraintEnd_toEndOf="parent"
             />
@@ -317,7 +317,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:tag="random"
-            android:text="@string/random"
+            android:text="@string/lbl_random"
             app:layout_constraintTop_toBottomOf="@+id/sw_alfa"
             app:layout_constraintEnd_toEndOf="parent"
             />
@@ -327,7 +327,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:tag="desc"
-            android:text="@string/descending"
+            android:text="@string/lbl_descending"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@id/sw_random"
             />
@@ -349,7 +349,7 @@
             android:labelFor="@id/text_threshold"
             android:paddingStart="3dp"
             android:paddingEnd="3dp"
-            android:text="@string/threshold_pre"
+            android:text="@string/lbl_threshold_pre"
             android:textColor="@color/border_color"
             android:textStyle="bold"
             app:layout_constraintTop_toBottomOf="@+id/divider05"
@@ -375,7 +375,7 @@
             android:background="@color/label_bgcolor"
             android:paddingStart="3dp"
             android:paddingEnd="3dp"
-            android:text="@string/threshold_post"
+            android:text="@string/lbl_threshold_post"
             android:textColor="@color/border_color"
             android:textStyle="bold"
             app:layout_constraintTop_toBottomOf="@+id/divider05"
@@ -388,39 +388,50 @@
             android:layout_marginTop="12dp"
             android:layout_marginEnd="8dp"
             android:tag="hide"
-            android:text="@string/hide_jumpers"
+            android:text="@string/lbl_hidejumpers"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/divider05"
             />
     <Button
             android:id="@+id/btn_select"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/btn_nav_height"
             android:layout_marginStart="8dp"
             android:layout_marginBottom="16dp"
-            android:text="@string/select"
-            app:layout_constraintStart_toStartOf="parent"
+            android:text="@string/btn_caption_select"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             />
     <Button
             android:id="@+id/btn_default"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/btn_nav_height"
             android:layout_marginBottom="16dp"
-            android:text="@string/standard"
-            app:layout_constraintStart_toEndOf="@id/btn_select"
-            app:layout_constraintEnd_toStartOf="@id/btn_cancel"
+            android:text="@string/btn_caption_default"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/btn_cancel"
+            />
+    <Button
+            android:id="@+id/btn_save_as_default"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/btn_nav_height"
+            android:layout_marginBottom="16dp"
+            android:text="@string/btn_caption_save_default"
+            android:textAllCaps="false"
+            android:textColor="@color/blue_text_color"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/btn_default"
+            app:layout_constraintStart_toEndOf="@id/btn_select"
             />
     <Button
             android:id="@+id/btn_cancel"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/btn_nav_height"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="16dp"
-            android:text="@string/cancel"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:text="@string/btn_caption_cancel"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             />
     <View
             android:id="@+id/view2"
