--- a/app/src/main/res/layout/verb_game.xml
+++ b/app/src/main/res/layout/verb_game.xml
@@ -55,7 +55,6 @@
             android:gravity="start|center_vertical"
             android:letterSpacing="0.02"
             android:paddingStart="4dp"
-            android:text="@string/ask"
             android:textColor="@color/blue_text_color"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -70,7 +69,6 @@
             android:layout_marginEnd="8dp"
             android:fontFamily="@font/tinos_italic"
             android:gravity="start|center_vertical"
-            android:text="@string/reveal"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -193,7 +191,7 @@
             android:background="@color/label_bgcolor"
             android:paddingStart="3dp"
             android:paddingEnd="3dp"
-            android:text="@string/level"
+            android:text="@string/lbl_level"
             android:textColor="@color/normal_text_color"
             android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@+id/divider_vert_2"
@@ -361,7 +359,7 @@
             android:layout_marginTop="4dp"
             android:layout_marginEnd="8dp"
             android:checked="true"
-            android:text="@string/basis"
+            android:text="@string/lbl_basis"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/lbl_level"
             />
@@ -373,7 +371,7 @@
             android:layout_marginEnd="8dp"
             android:checked="false"
             android:elevation="2dp"
-            android:text="@string/advanced"
+            android:text="@string/lbl_advanced"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/sw_level_basis"
             />
@@ -384,7 +382,7 @@
             android:layout_marginTop="4dp"
             android:layout_marginEnd="8dp"
             android:checked="false"
-            android:text="@string/nice_to_know"
+            android:text="@string/lbl_nice2know"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/sw_level_gevorderd"
             />
@@ -410,9 +408,9 @@
     <Button
             android:id="@+id/btn_show_ladder"
             android:layout_width="80dp"
-            android:layout_height="@dimen/nav_btn_height"
-            android:layout_marginBottom="8dp"
-            android:text="@string/btn_cap_ladder"
+            android:layout_height="@dimen/btn_nav_height"
+            android:layout_marginBottom="4dp"
+            android:text="@string/btn_caption_ladder"
             android:textAllCaps="false"
             android:textColor="@color/blue_text_color"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -421,9 +419,9 @@
     <Button
             android:id="@+id/btn_verbal"
             android:layout_width="60dp"
-            android:layout_height="@dimen/nav_btn_height"
-            android:layout_marginBottom="8dp"
-            android:text="@string/speak"
+            android:layout_height="@dimen/btn_nav_height"
+            android:layout_marginBottom="4dp"
+            android:text="@string/btn_caption_speak"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -431,9 +429,9 @@
     <Button
             android:id="@+id/btn_previous"
             android:layout_width="80dp"
-            android:layout_height="@dimen/nav_btn_height"
-            android:layout_marginBottom="8dp"
-            android:text="@string/btn_cap_prev"
+            android:layout_height="@dimen/btn_nav_height"
+            android:layout_marginBottom="4dp"
+            android:text="@string/btn_caption_previous"
             android:textAllCaps="false"
             android:textColor="@color/normal_text_color"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -441,10 +439,10 @@
             />
     <Button
             android:id="@+id/btn_fout"
-            android:layout_width="wrap_content"
-            android:layout_height="@dimen/nav_btn_height"
-            android:layout_marginBottom="8dp"
-            android:text="@string/btn_cap_restart"
+            android:layout_width="90dp"
+            android:layout_height="@dimen/btn_nav_height"
+            android:layout_marginBottom="4dp"
+            android:text="@string/btn_caption_restart"
             android:textAllCaps="false"
             android:textColor="@color/colorAccent"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -452,11 +450,11 @@
             />
     <Button
             android:id="@+id/btn_go"
-            android:layout_width="100dp"
-            android:layout_height="@dimen/nav_btn_height"
+            android:layout_width="90dp"
+            android:layout_height="@dimen/btn_nav_height"
             android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
-            android:text="@string/btn_cap_check_next"
+            android:layout_marginBottom="4dp"
+            android:text="@string/btn_caption_checknext"
             android:textAllCaps="false"
             android:textColor="@color/colorPrimary"
             app:layout_constraintBottom_toBottomOf="parent"
