--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
 
     <color name="label_bgcolor">#B8A1E1</color>
     <color name="border_gray">#B4B4B4</color>
+    <!-- Wikipedia Flag of NL -->
     <color name="helder_vermiljoen">#AE1C28</color>
     <color name="kobaltblauw">#21468B</color>
     <!-- Wikipedia Flag of Greece -->
