--- a/app/src/main/res/layout/flashcard.xml
+++ b/app/src/main/res/layout/flashcard.xml
@@ -6,8 +6,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".FlashCard"
-        tools:ignore="ContentDescription, HardcodedText"
         >
+<!--        tools:ignore="HardcodedText"-->
     <TextView
             android:id="@+id/txt_progress"
             android:layout_width="wrap_content"
@@ -26,88 +26,12 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:background="@android:color/transparent"
-            android:contentDescription="@string/flag_greek"
+            android:contentDescription="@string/img_content_flaggr"
             android:cropToPadding="true"
             android:scaleType="fitCenter"
             android:src="@drawable/flag_gr_small"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/text_nederlands"
-            />
-    <Button
-            android:id="@+id/btn_OTT"
-            android:layout_width="44dp"
-            android:layout_height="28dp"
-            android:layout_marginEnd="4dp"
-            android:background="@drawable/button_bg_border"
-            android:gravity="center"
-            android:text="ενέσ"
-            android:textAllCaps="false"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/shadow_grieks"
-            />
-    <Button
-            android:id="@+id/btn_OTTT"
-            android:layout_width="44dp"
-            android:layout_height="28dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginEnd="4dp"
-            android:background="@drawable/button_bg_border"
-            android:gravity="center"
-            android:text="μέλλ"
-            android:textAllCaps="false"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btn_OTT"
-            />
-    <Button
-            android:id="@+id/btn_VVT"
-            android:layout_width="44dp"
-            android:layout_height="28dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginEnd="4dp"
-            android:background="@drawable/button_bg_border"
-            android:gravity="center"
-            android:text="αόρι"
-            android:textAllCaps="false"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btn_OTTT"
-            />
-    <Button
-            android:id="@+id/btn_OVT"
-            android:layout_width="44dp"
-            android:layout_height="28dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginEnd="4dp"
-            android:background="@drawable/button_bg_border"
-            android:gravity="center"
-            android:text="παρα"
-            android:textAllCaps="false"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btn_VVT"
-            />
-    <Button
-            android:id="@+id/btn_GW"
-            android:layout_width="44dp"
-            android:layout_height="28dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="4dp"
-            android:background="@drawable/button_yellow_bg_border"
-            android:gravity="center"
-            android:text="προσ"
-            android:textAllCaps="false"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btn_OVT"
-            />
-    <Button
-            android:id="@+id/btn_show_all"
-            android:layout_width="44dp"
-            android:layout_height="28dp"
-            android:layout_marginEnd="4dp"
-            android:background="@drawable/button_orange_bg_border"
-            android:gravity="center"
-            android:text="όλοι"
-            android:textAllCaps="false"
-            app:layout_constraintBottom_toBottomOf="@+id/shadow_grieks"
-            app:layout_constraintEnd_toEndOf="parent"
             />
     <TextView
             android:id="@+id/shadow_grieks"
@@ -121,7 +45,7 @@
             android:paddingEnd="3dp"
             android:textAlignment="gravity"
             android:textSize="64sp"
-            app:layout_constraintEnd_toStartOf="@+id/btn_OTT"
+            app:layout_constraintEnd_toEndOf="@+id/text_grieks"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/ibtn_flag_greek"
             />
@@ -143,7 +67,7 @@
             android:textSize="20sp"
             android:textStyle="normal|italic"
             android:visibility="invisible"
-            app:layout_constraintEnd_toStartOf="@+id/btn_OTT"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/ibtn_flag_greek"
             />
@@ -154,7 +78,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:background="@android:color/transparent"
-            android:contentDescription="@string/flag_dutch"
+            android:contentDescription="@string/img_content_flagnl"
             android:cropToPadding="true"
             android:scaleType="fitCenter"
             android:src="@drawable/flag_nl_small"
@@ -176,12 +100,12 @@
             app:layout_constraintTop_toBottomOf="@+id/ibtn_flag_nl"
             />
     <TextView
-            android:id="@+id/lbl-correct"
+            android:id="@+id/lbl_correct"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="4dp"
-            android:text="@string/emoji_correct"
+            android:text="@string/lbl_true"
             android:textColor="?android:attr/colorPrimary"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="@id/text_grieks"
@@ -194,7 +118,7 @@
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="4dp"
             android:rotation="180"
-            android:text="@string/emoji_back"
+            android:text="@string/lbl_back"
             android:textColor="@android:color/background_dark"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="@id/text_nederlands"
@@ -209,18 +133,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/text_grieks"
             app:srcCompat="@drawable/paperclip"
-            />
-    <TextView
-            android:id="@+id/shadow_note"
-            android:layout_width="match_parent"
-            android:layout_height="92dp"
-            android:layout_margin="2dp"
-            android:background="@drawable/shadow"
-            android:paddingStart="3dp"
-            android:paddingEnd="3dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/img_paperclip"
-            tools:layout_editor_absoluteY="384dp"
+            android:contentDescription="@string/img_content_paperclip"
             />
     <TextView
             android:id="@+id/text_note"
@@ -236,13 +149,116 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/img_paperclip"
             />
+    <Button
+            android:id="@+id/btn_OTT"
+            android:layout_width="@dimen/btn_conjugations_width"
+            android:layout_height="@dimen/btn_conjugations_height"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="4dp"
+            android:background="@drawable/button_bg_border"
+            android:gravity="center"
+            android:text="@string/btn_caption_present"
+            android:textAllCaps="false"
+            app:layout_constraintEnd_toStartOf="@+id/btn_OTTT"
+            app:layout_constraintTop_toBottomOf="@+id/shadow_grieks"
+            />
+    <Button
+            android:id="@+id/btn_OTTT"
+            android:layout_width="@dimen/btn_conjugations_width"
+            android:layout_height="@dimen/btn_conjugations_height"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="4dp"
+            android:background="@drawable/button_bg_border"
+            android:gravity="center"
+            android:text="@string/btn_caption_future"
+            android:textAllCaps="false"
+            app:layout_constraintEnd_toStartOf="@+id/btn_VVT"
+            app:layout_constraintTop_toBottomOf="@+id/shadow_grieks"
+            />
+    <Button
+            android:id="@+id/btn_VVT"
+            android:layout_width="@dimen/btn_conjugations_width"
+            android:layout_height="@dimen/btn_conjugations_height"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="4dp"
+            android:background="@drawable/button_bg_border"
+            android:gravity="center"
+            android:text="@string/btn_caption_past"
+            android:textAllCaps="false"
+            app:layout_constraintEnd_toStartOf="@+id/btn_OVT"
+            app:layout_constraintTop_toBottomOf="@+id/shadow_grieks"
+            />
+    <Button
+            android:id="@+id/btn_OVT"
+            android:layout_width="@dimen/btn_conjugations_width"
+            android:layout_height="@dimen/btn_conjugations_height"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="4dp"
+            android:background="@drawable/button_bg_border"
+            android:gravity="center"
+            android:text="@string/btn_caption_paratatikos"
+            android:textAllCaps="false"
+            app:layout_constraintEnd_toStartOf="@+id/btn_GW"
+            app:layout_constraintTop_toBottomOf="@+id/shadow_grieks"
+            />
+    <Button
+            android:id="@+id/btn_GW"
+            android:layout_width="@dimen/btn_conjugations_width"
+            android:layout_height="@dimen/btn_conjugations_height"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="4dp"
+            android:background="@drawable/button_yellow_bg_border"
+            android:gravity="center"
+            android:text="@string/btn_caption_imperative"
+            android:textAllCaps="false"
+            app:layout_constraintEnd_toStartOf="@+id/btn_show_all"
+            app:layout_constraintTop_toBottomOf="@+id/shadow_grieks"
+            />
+    <Button
+            android:id="@+id/btn_show_all"
+            android:layout_width="@dimen/btn_conjugations_width"
+            android:layout_height="@dimen/btn_conjugations_height"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="4dp"
+            android:background="@drawable/button_orange_bg_border"
+            android:gravity="center"
+            android:text="@string/btn_caption_showall"
+            android:textAllCaps="false"
+            app:layout_constraintEnd_toStartOf="@+id/btn_active_passive"
+            app:layout_constraintTop_toBottomOf="@+id/shadow_grieks"
+            />
+    <Button
+            android:id="@+id/btn_active_passive"
+            android:layout_width="@dimen/btn_conjugations_width"
+            android:layout_height="@dimen/btn_conjugations_height"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="8dp"
+            android:background="@drawable/button_pink_bg_border"
+            android:gravity="center"
+            android:text="@string/btn_caption_active_passive"
+            android:textAllCaps="false"
+            android:textSize="14sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/shadow_grieks"
+            />
     <TextView
-            android:id="@+id/lbl-wrong"
+            android:id="@+id/shadow_note"
+            android:layout_width="match_parent"
+            android:layout_height="92dp"
+            android:layout_margin="2dp"
+            android:background="@drawable/shadow"
+            android:paddingStart="3dp"
+            android:paddingEnd="3dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/img_paperclip"
+            />
+    <TextView
+            android:id="@+id/lbl_wrong"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="4dp"
-            android:text="@string/emoji_wrong"
+            android:text="@string/lbl_false"
             android:textColor="?android:attr/colorAccent"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="@id/shadow_note"
@@ -253,9 +269,8 @@
             android:layout_width="87dp"
             android:layout_height="20dp"
             android:layout_marginTop="4dp"
-            android:layout_marginEnd="4dp"
             android:gravity="end|center_vertical"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/shadow_grieks"
             app:layout_constraintTop_toBottomOf="@+id/text_nederlands"
             />
     <ProgressBar
@@ -288,36 +303,38 @@
             app:layout_constraintTop_toBottomOf="@+id/shadow_note"
             tools:text="goed: 0 totaal: 0 = 100%"
             />
-    <ImageButton
+    <Button
             android:id="@+id/btn_reveal"
-            android:layout_width="@dimen/nav_btn_width"
-            android:layout_height="@dimen/nav_btn_height"
+            android:layout_width="@dimen/btn_nav_width"
+            android:layout_height="@dimen/btn_nav_height"
             android:layout_marginStart="8dp"
             android:layout_marginBottom="8dp"
             android:elevation="2dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/flag_gr_small"
+            android:text="@string/btn_caption_reveal"
             android:textAllCaps="false"
+            android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             />
     <Button
             android:id="@+id/btn_speak"
-            android:layout_width="@dimen/nav_btn_width"
-            android:layout_height="@dimen/nav_btn_height"
+            android:layout_width="@dimen/btn_nav_width"
+            android:layout_height="@dimen/btn_nav_height"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            android:text="@string/speak"
+            android:text="@string/btn_caption_speak"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/btn_prev_block"
             />
     <Button
             android:id="@+id/btn_prev_block"
-            android:layout_width="@dimen/nav_btn_width"
-            android:layout_height="@dimen/nav_btn_height"
+            android:layout_width="@dimen/btn_nav_width"
+            android:layout_height="@dimen/btn_nav_height"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
+            android:enabled="true"
             android:text="@string/btn_caption_prev_block"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -325,8 +342,8 @@
             />
     <Button
             android:id="@+id/btn_next_block"
-            android:layout_width="@dimen/nav_btn_width"
-            android:layout_height="@dimen/nav_btn_height"
+            android:layout_width="@dimen/btn_nav_width"
+            android:layout_height="@dimen/btn_nav_height"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
             android:text="@string/btn_caption_next_block"
@@ -342,7 +359,7 @@
             android:layout_marginTop="8dp"
             android:background="@color/colorAccent"
             android:gravity="bottom|center"
-            android:text="↷"
+            android:text="@string/lbl_jumper"
             android:textColor="?attr/colorBackgroundFloating"
             android:textSize="24sp"
             android:textStyle="bold"
@@ -357,7 +374,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginBottom="16dp"
-            android:text="Flash "
+            android:text="@string/lbl_flash_chk"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/btn_reveal"
