--- a/app/src/main/res/layout/lemma_recycler_item.xml
+++ b/app/src/main/res/layout/lemma_recycler_item.xml
@@ -13,7 +13,7 @@
             android:layout_marginEnd="8dp"
             android:background="@color/κυανός"
             android:gravity="bottom|center"
-            android:text="@string/flash"
+            android:text="@string/lbl_lightning"
             android:textColor="@android:color/holo_purple"
             android:textSize="14sp"
             android:textStyle="bold"
