--- a/app/src/main/res/menu/menu_verbgame.xml
+++ b/app/src/main/res/menu/menu_verbgame.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-        >
-
+<menu xmlns:android="http://schemas.android.com/apk/res/android" >
     <item
             android:id="@+id/menu_game_speech"
             android:title="@string/menu_caption_use_speech"
@@ -14,6 +12,10 @@
     <item
             android:id="@+id/menu_mail_lemma"
             android:title="@string/menu_caption_email"
+            />
+    <item
+            android:id="@+id/menu_raw_view"
+            android:title="@string/menu_caption_base_record"
             />
     <item
             android:id="@+id/menu_wordreference"
