--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!--<dimen name="main_btn_width">160dp</dimen>-->
-
-    <!--in use with Hangman activity-->
-    <dimen name="greek_button_width">44dp</dimen>
+    <!--in use with Filter/Sort and Hangman activity-->
+    <dimen name="btn_greek_width">44dp</dimen>
+    <dimen name="btn_greek_height">50dp</dimen>
     <!--inavigation buttons-->
-    <dimen name="nav_btn_width">64dp</dimen>
-    <dimen name="nav_btn_height">58dp</dimen>
-    <dimen name="greek_button_height">50dp</dimen>
+    <dimen name="btn_nav_width">64dp</dimen>
+    <dimen name="btn_nav_height">58dp</dimen>
+    <dimen name="btn_main_height">80dp</dimen>
+    <dimen name="btn_main_width">80dp</dimen>
+    <dimen name="btn_conjugations_height">30dp</dimen>
+    <dimen name="btn_conjugations_width">44dp</dimen>
 </resources>
